--- a/views/templates/scripttemplate.ejs
+++ b/views/templates/scripttemplate.ejs
@@ -46,3 +46,18 @@
 });
 
 </script>
+
+<!-- script that validates a codepen.io URL -->
+<script>
+function isCodepenURL(str){
+  var substr1= "http";
+  var substr2= "codepen.io";
+  console.log();
+  if(str.indexOf(substr1) > -1 && str.indexOf(substr2) > -1){
+    return 1;
+  } else {
+    return 0;
+  }
+}
+
+</script>
