dashboard additions, cleanup, fixed #10

--- a/views/Admindash.ejs
+++ b/views/Admindash.ejs
@@ -10,6 +10,27 @@
 <body>
 <% include templates/header.ejs %>
 
+<div class="row">
+	<div class="col-md-10 col-md-offset-1">
+		<div class="panel panel-default translate10">
+		  <div class="panel-body">
+		  	<h3>Admin dashboard </h3>
+		  	<p>&nbsp;</p>
+		  	<div class="row">
+		  		<div class="col-md-3 col-md-offset-1">
+		  			<button type="button" class="btn btn-default">To APEX</button>
+		  		</div>
+		  		<div class="col-md-3 col-md-offset-1">
+		  			<a class="btn btn-default" href="/devstats" role="button">To Devstats</a>
+		  		</div>
+		  	</div>
+
+
+
+		  </div>
+		</div>
+	</div>
+</div>
 
 </body>
 </html>
