added connection to db for global statistics and d3 dependencies

--- a/views/Dashboard.ejs
+++ b/views/Dashboard.ejs
@@ -95,7 +95,7 @@
                 <span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>
                 <div class="info-box-content">
                   <span class="info-box-text">New Members</span>
-                  <span class="info-box-number">2,000</span>
+                  <span class="info-box-number"><%= resultSet %></span>
                 </div><!-- /.info-box-content -->
               </div><!-- /.info-box -->
             </div><!-- /.col -->
